<resources>
    <string name="app_name">ElektroHjelpen</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mainKundeKnapp">Kundeinformasjon</string>
    <string name="mainOppgaveKnapp">Oppgaveliste</string>
    <string name="mainEnhetKnapp">Enhetsomregning</string>
    <string name="title_activity_kundeinformasjon">Kundeinformasjon</string>
    <string name="title_activity_ny_kunde">Ny Kunde</string>
    <string name="title_activity_oppgave_liste">Oppgaveliste</string>
    <string name="title_activity_ny_oppgave">Ny Oppgave</string>
    <string name="title_activity_enhetsomregning">Enhetsomregning</string>
    <string name="title_activity_main_ohms_lov">Ohm\'s Lov</string>
    <string name="title_activity_volt">Volt (Spenning)</string>
    <string name="title_activity_ampere">Ampere (Strøm)</string>
    <string name="title_activity_resistans">Ohm (Resistans)</string>
    <string name="title_activity_watt">Watt (Effekt)</string>
    <string name="Volt">Volt</string>
    <string name="Resistans">Resistans</string>
    <string name="Watt">Watt</string>
    <string name="kalkuler">kalkuler</string>
    <string name="formler">Formler</string>
    <string name="omhslov">Ohm\'s Lov</string>
    <string name="CCavstand">C-C avstand</string>
    <string name="nyKunde">Ny Kunde</string>
    <string name="voltSpenning">Volt (Spenning)</string>
    <string name="ampereStrom">Ampere (Strøm)</string>
    <string name="ohmResistans">Ohm (Resistans)</string>
    <string name="wattEffekt">Watt (Effekt)</string>
    <string name="hvilkenEnhet">Hvilken enhet vil du regne ut?</string>
    <string name="navn">Navn</string>
    <string name="epost">E-post</string>
    <string name="tlfNummer">Telefon nummer</string>
    <string name="adresse">Adresse</string>
    <string name="ekstraInformasjon">Ekstra informasjon</string>
    <string name="lagre">Lagre</string>
    <string name="navnPaaOppgave">Navn på oppgave</string>
    <string name="beskrivelseAvOppgave">Beskrivelse av oppgave</string>
    <string name="nyOppgave">Ny oppgave</string>
    <string name="volt">Volt</string>
    <string name="ampere">Ampere</string>
    <string name="watt">Watt</string>
    <string name="Kalkuler">Kalkuler</string>
    <string name="formlerOhm">Formler</string>
    <string name="ampereVolt">Ampere</string>
    <string name="ohmVolt">Ohm</string>
    <string name="wattVolt">Watt</string>
    <string name="kalkulerVolt">Kalkuler</string>
    <string name="formlerVolt">Formler:</string>
    <string name="voltWatt">Volt</string>
    <string name="ampereWatt">Ampere</string>
    <string name="ohmWatt">Ohm</string>
    <string name="wattKalkuler">Kalkuler</string>
    <string name="wattFormler">Formler</string>
    <string name="title_activity_cc_avstand">CC avstand</string>
</resources>
